--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 quarkus.package.type=uber-jar
 
 # default
+%dev.quarkus.log.level=DEBUG
 quarkus.log.level=INFO
 quarkus.log.category."org.acme.rest.json".level=DEBUG
+
+quarkus.oidc.auth-server-url=
+quarkus.oidc.client-id=
+quarkus.oidc.credentials.secret=
+
+# quarkus.oidc.authentication.id-token-required=true
